--- a/code/working/cloudFormation/global.template.yml
+++ b/code/working/cloudFormation/global.template.yml
@@ -4,12 +4,7 @@ Transform: AWS::Serverless-2016-10-31
 Description: AWS CloudFormation MDLC Sample Template.
 Parameters:
   Stage: {Type: String, Default: 'test'}
-  Region: {Type: String, Default: 'USAmazon'}
-  UseBatsKeyParam: {Type: String, Default: 'false', AllowedValues: ['true','false']}
-  DeploymentBucketImportName:
-    Type: String
-    Default: "DeploymentBucket"
-    Description: "This parameter is meant to be passed by LPT (and piplines). It holds the name of import that points to the bucket that holds your artifacts. You should use this as the import (Fn::ImportValue: {Ref: DeploymentBucket}) for getting any BATS related artifacts."
+  Region: {Type: String, Default: 'USAmazon'}  
   MDLCWorkshopPublicArtifactBucket:
     Type: String
     Default: "kk-public-ws-bucket"
@@ -25,11 +20,6 @@ Parameters:
   SklearnLambdaLayerArtifactKey:
     Type: String
     Default: "python-libs/python36-sklearn203.zip"
-Conditions:
-  UseBatsKey:
-    'Fn::Equals':
-      - {Ref: UseBatsKeyParam}
-      - 'true'
 Resources:
   MDLCS3Bucket:
     Type: AWS::S3::Bucket
@@ -57,5 +47,5 @@ Resources:
 
 Outputs:
   StackArn:
-    Description: Don't remove this output! Pipelines needs this to do its association. (And LPT. Removing it will break things)
+    Description: Don't remove this output! 
     Value: {Ref: 'AWS::StackId'}
